--- a/CognativeSurveyX/CognativeSurveyX/CognativeSurveyX.csproj
+++ b/CognativeSurveyX/CognativeSurveyX/CognativeSurveyX.csproj
@@ -39,10 +39,16 @@
     <EmbeddedResource Update="Controls\Fejek5.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Controls\RadioButtonCsakBumbuc.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Fregments\FFejek.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Fregments\FSkala.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="MainPage2.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Nyelv\AppResource.resx">
