--- a/CognativeSurveyX/CognativeSurveyX.UWP/CognativeSurveyX.UWP.csproj
+++ b/CognativeSurveyX/CognativeSurveyX.UWP/CognativeSurveyX.UWP.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UWPDownloader.cs" />
     <Compile Include="UWPIPath.cs" />
+    <Compile Include="UWPPlatformInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
