--- a/CognativeSurveyX/CognativeSurveyX.iOS/CognativeSurveyX.iOS.csproj
+++ b/CognativeSurveyX/CognativeSurveyX.iOS/CognativeSurveyX.iOS.csproj
@@ -49,14 +49,17 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <MtouchArch>ARM64</MtouchArch>
-    <CodesignKey>iPhone Developer</CodesignKey>
+    <CodesignKey>iPhone Developer: balazs domjan (W57QT5F737)</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
     <CodesignEntitlements>
     </CodesignEntitlements>
     <CodesignProvision />
     <CodesignExtraArgs />
-    <CodesignResourceRules />
+    <CodesignResourceRules>
+    </CodesignResourceRules>
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
+    <OptimizePNGs>true</OptimizePNGs>
+    <MtouchNoSymbolStrip>false</MtouchNoSymbolStrip>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -102,6 +105,7 @@
     <Compile Include="Display.cs" />
     <Compile Include="IosDownloader.cs" />
     <Compile Include="IOSPath.cs" />
+    <Compile Include="IOSPlatformInfo.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <None Include="Entitlements.plist" />
@@ -109,6 +113,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ImageAsset Include="Assets.xcassets\LaunchImages.launchimage\Contents.json">
+      <Visible>false</Visible>
+    </ImageAsset>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
       <Visible>false</Visible>
