--- a/CognativeSurveyX/CognativeSurveyX.iOS/Info.plist
+++ b/CognativeSurveyX/CognativeSurveyX.iOS/Info.plist
@@ -47,5 +47,7 @@
 			<string>Document Type 1</string>
 		</dict>
 	</array>
+  <key>NSLocationWhenInUseUsageDescription</key>
+ <string>This app needs access location when open.</string>
 </dict>
 </plist>
