--- a/CognativeSurveyX/CognativeSurveyX.UWP/CognativeSurveyX.UWP.csproj
+++ b/CognativeSurveyX/CognativeSurveyX.UWP/CognativeSurveyX.UWP.csproj
@@ -172,6 +172,9 @@
     <PackageReference Include="Xam.Plugins.DownloadManager">
       <Version>1.4.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>1.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.5.0.129452" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.9" />
   </ItemGroup>
