--- a/CognativeSurveyX/CognativeSurveyX.iOS/CognativeSurveyX.iOS.csproj
+++ b/CognativeSurveyX/CognativeSurveyX.iOS/CognativeSurveyX.iOS.csproj
@@ -109,7 +109,9 @@
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <None Include="Entitlements.plist" />
-    <None Include="Info.plist" />
+    <None Include="Info.plist">
+      <SubType>Designer</SubType>
+    </None>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -190,6 +192,9 @@
     </PackageReference>
     <PackageReference Include="Xam.Plugins.DownloadManager">
       <Version>1.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>1.0.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.5.0.129452" />
   </ItemGroup>
