--- a/CognativeSurveyX/CognativeSurveyX.Android/CognativeSurveyX.Android.csproj
+++ b/CognativeSurveyX/CognativeSurveyX.Android/CognativeSurveyX.Android.csproj
@@ -129,13 +129,15 @@
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
-    <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CognativeSurveyX\CognativeSurveyX.csproj">
       <Project>{CD2CBF0A-6F61-41E8-85B9-9EEC88DA25BF}</Project>
       <Name>CognativeSurveyX</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\hamburger.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
