--- a/CognativeSurveyX/CognativeSurveyX.iOS/CognativeSurveyX.iOS.csproj
+++ b/CognativeSurveyX/CognativeSurveyX.iOS/CognativeSurveyX.iOS.csproj
@@ -205,4 +205,7 @@
       <Name>CognativeSurveyX</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\hamburger.png" />
+  </ItemGroup>
 </Project>
