--- a/CognativeSurveyX/CognativeSurveyX.iOS/Info.plist
+++ b/CognativeSurveyX/CognativeSurveyX.iOS/Info.plist
@@ -37,6 +37,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>location</string>
+		<string>newsstand-content</string>
 	</array>
 	<key>XSLaunchImageAssets</key>
 	<string>Assets.xcassets/LaunchImages.launchimage</string>
@@ -46,8 +47,21 @@
 			<key>CFBundleTypeName</key>
 			<string>Document Type 1</string>
 		</dict>
+		<dict>
+			<key>CFBundleTypeName</key>
+			<string>MKDirectionsRequest</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>com.apple.maps.directionsrequest</string>
+			</array>
+		</dict>
 	</array>
-  <key>NSLocationWhenInUseUsageDescription</key>
- <string>This app needs access location when open.</string>
+  <key>NSAppTransportSecurity</key>
+  <dict>
+    <key>NSAllowsArbitraryLoads</key>
+    <true/>
+  </dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app needs access location when open.</string>
 </dict>
 </plist>
