--- a/CognativeSurveyX/CognativeSurveyX.iOS/Info.plist
+++ b/CognativeSurveyX/CognativeSurveyX.iOS/Info.plist
@@ -63,5 +63,11 @@
   </dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This app needs access location when open.</string>
+  <key>NSCameraUsageDescription</key>
+  <string>This app needs access to the camera to take photos.</string>
+  <key>NSPhotoLibraryUsageDescription</key>
+  <string>This app needs access to photos.</string>
+  <key>NSMicrophoneUsageDescription</key>
+  <string>This app needs access to microphone.</string>
 </dict>
 </plist>
