--- a/CognativeSurveyX/CognativeSurveyX.Android/CognativeSurveyX.Android.csproj
+++ b/CognativeSurveyX/CognativeSurveyX.Android/CognativeSurveyX.Android.csproj
@@ -114,6 +114,7 @@
     <Compile Include="AndroidIPath.cs" />
     <Compile Include="AndroidPlatformInfo.cs" />
     <Compile Include="DatabaseConnection_Android.cs" />
+    <Compile Include="DatabaseConnection_AndroidAsync.cs" />
     <Compile Include="Display.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
