--- a/CognativeSurveyX/CognativeSurveyX.Android/Properties/AndroidManifest.xml
+++ b/CognativeSurveyX/CognativeSurveyX.Android/Properties/AndroidManifest.xml
@@ -1,13 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" 
-          package="hu.cognative.CognativeSurveyX" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="18" android:targetSdkVersion="27" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="5" package="hu.cognative.CognativeSurveyX" android:installLocation="internalOnly" android:versionCode="8">
+	<uses-sdk android:minSdkVersion="18" android:targetSdkVersion="29" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.CAMERA" />
-  
 	<application android:label="CognativeSurveyX.Android">
 		<provider android:name="android.support.v4.content.FileProvider" android:authorities="hu.cognative.CognativeSurveyX.fileprovider" android:exported="false" android:grantUriPermissions="true">
 			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
